<resources>
    <string name="app_name">PersonalProject</string>
    <string name="height">Height "</string>
    <string name="chest">Chest "</string>
    <string name="waist">Waist "</string>
    <string name="hip_inches">Hip "</string>
    <string name="weight_lb">Weight(lb)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment new</string>

    <string-array name="condition_array">
        <item> Select an item condition..</item>
        <item>New With Tags</item>
        <item>Hardly Worn</item>
        <item>Used: Excellent </item>
        <item>Used: Good</item>
        <item>Used: Fair</item>
        <item>Used: Very</item>
    </string-array>

    <string-array name="sizing_array">
        <item> Select an item size..</item>
        <item>XXS</item>
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>

    <string-array name="item_type">
        <item> Select an item type..</item>
        <item> top </item>
        <item> jacket </item>
        <item> coat </item>
        <item> dress </item>
        <item> jumpsuit</item>
        <item> shorts </item>
        <item> skirt </item>
        <item> jeans </item>
        <item> activewear </item>
        <item> pants </item>
        <item> undergarment </item>
        <item> swimwear </item>
        <item> other </item>
    </string-array>

</resources>