<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="0dp"
        android:text="Logout" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/account_circle" />

    <TextView
        android:id="@+id/tvNameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfilePic"
        android:fontFamily="@font/allerta"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        tools:text="Savitha" />

    <TextView
        android:id="@+id/tvUsernameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNameProfile"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@savsrin" />

    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsernameProfile"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="savsrin@gmail.com" />

    <TextView
        android:id="@+id/tvMeasurementProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmailProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="My Measurements"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etHeightProfile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMeasurementProfile"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/allerta"
        android:hint="@string/height"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/etChestProfile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMeasurementProfile"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/etHeightProfile"
        android:fontFamily="@font/allerta"
        android:hint="@string/chest"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/etWaistProfile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMeasurementProfile"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/etChestProfile"
        android:fontFamily="@font/allerta"
        android:hint="@string/waist"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <EditText
        android:id="@+id/etHipProfile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMeasurementProfile"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/etWaistProfile"
        android:fontFamily="@font/allerta"
        android:hint="@string/hip_inches"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/etWeightProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etHeightProfile"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/allerta"
        android:hint="@string/weight_lb"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</RelativeLayout>