<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_centerInParent="true"
    tools:context=".activities.SignupActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/baumans"
        android:text="Create an account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/dark_salmon"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/account_circle"
        android:layout_below="@id/tvWelcome"
        android:id="@+id/ivProfile"/>

    <EditText
        android:id="@+id/etNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile"
        android:layout_marginTop="10dp"
        android:hint="Name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etEmailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNameSignup"
        android:layout_marginTop="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvSizingInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailSignup"
        android:layout_marginTop="20dp"
        android:textColor="@color/dark_salmon"
        android:text="Sizing Information"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etHeightSignup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSizingInfo"
        android:layout_marginTop="10dp"
        android:hint="@string/height"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/etChestSignup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSizingInfo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/etHeightSignup"
        android:hint="@string/chest"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/etWaistSignup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSizingInfo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/etChestSignup"
        android:hint="@string/waist"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <EditText
        android:id="@+id/etHipSignup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSizingInfo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/etWaistSignup"
        android:hint="@string/hip_inches"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/etWeightSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etHeightSignup"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/weight_lb"
        android:numeric="decimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="35dp"
        android:layout_below="@id/etWeightSignup"
        android:text="sign up" />

</RelativeLayout>